# MINI_RL_ENVIRONMENT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  environment.py  index.html  inference.py  models.py  openenv.yaml  package.json  pyproject.toml  requirements.txt  tasks.py  utils.py  validate-submission.sh  vite.config.js
app/: ApiDocs.tsx  DashboardSidebar.tsx  HeroSection.tsx  SimulationDashboard.tsx  TaskScenarios.tsx
backend/api/: app.py
backend/configs/: easy.yaml  hard.yaml  scenarios.yaml  warehouse_map.json
backend/core/: environment.py  tasks.py  utils.py
configs/: medium.yaml  scenarios.yaml
frontend/: package-lock.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/app/: DashboardSidebar.tsx  FeaturesGrid.tsx  HeroSection.tsx  Index.tsx  SimulationDashboard.tsx  WarehouseGrid.tsx  index.css  tailwind.config.ts
logs/: easy_run.txt  hard_run.txt  medium_run.txt
scripts/: generate_replay_logs.py  pre_submission_guard.py
server/: app.py
src/: main.tsx
